--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 body {
@@ -14,4 +14,14 @@ main {
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.486);
 
+}
+
+h1 {
+    font-size: 30px;
+    color: rgb(201, 80, 248);
+}
+
+h2 {
+    font-size: 25px;
+    color: rgb(161, 90, 228);
 }
